@@ -1,0 +1,7 @@
+import React from 'react';
+import BaseIcon from '../styles/base-icon';
+import icon from './icon.svg';
+
+const LinkIcon = ( props ) => <BaseIcon { ...props } src={ icon } />;
+
+export default LinkIcon;
